Ensure card z-index is high enough (fixes #24)

--- a/css/calendar.scss
+++ b/css/calendar.scss
@@ -38,4 +38,7 @@
             }
         }
     }
+    &.child-active {
+        z-index: 99;
+    }
 }
